--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#511935",
-        "titleBar.activeBackground": "#71234A",
+        "activityBar.background": "#0077ff",
+        "titleBar.activeBackground": "#0400d8",
         "titleBar.activeForeground": "#FEFCFD"
     },
     "cSpell.words": [
