--- a/.htaccess
+++ b/.htaccess
@@ -40,3 +40,7 @@ RewriteRule . index.php [L]
 </IfModule>
 
 # END WordPress 
+
+<IfModule mod_deflate.c>
+  AddOutputFilterByType DEFLATE application/x-httpd-php
+</IfModule>
